compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__unicode1.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\npub fn emoji() -> String {\n  \"\\u{1f600}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn emoji() -> String {
  "\u{1f600}"
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Emoji() gleam_P.String_t {
  return "\U0001f600"
}
